--- a/index.html
+++ b/index.html
@@ -130,9 +130,11 @@ th{background:#fafafa}
       <span>Combo</span><b id="comboDisc">₹0</b>
     </div>
 
-    <div class="row" id="specialNameRow" style="display:none">
-      <span>Offer</span><b id="specialNameText"></b>
-    </div>
+    <div class="row" id="specialRow" style="display:none">
+  <span id="specialLabel">Special Discount</span>
+  <b id="specialDisc">₹0</b>
+</div>
+
 
     <div class="row" id="specialRow" style="display:none">
       <span>Special</span><b id="specialDisc">₹0</b>
