--- a/index.html
+++ b/index.html
@@ -208,11 +208,11 @@ th{background:#fafafa}
 
   <div class="summary">
     <div class="row"><span>Order Value</span><b id="orderValue">₹0</b></div>
-    <div class="row"><span>Website</span><b id="webDisc">₹0</b></div>
-    <div class="row"><span>UPI</span><b id="upiDisc">₹0</b></div>
+    <div class="row"><span>Website Discount</span><b id="webDisc">₹0</b></div>
+    <div class="row"><span>UPI Discount</span><b id="upiDisc">₹0</b></div>
 
     <div class="row" id="comboRow" style="display:none">
-      <span>Combo</span><b id="comboDisc">₹0</b>
+      <span>Combo Discount</span><b id="comboDisc">₹0</b>
     </div>
 
     <div class="row" id="specialRow" style="display:none">
