--- a/index.html
+++ b/index.html
@@ -211,9 +211,11 @@ th{background:#fafafa}
     <div class="row"><span>Website Discount</span><b id="webDisc">₹0</b></div>
     <div class="row"><span>UPI Discount</span><b id="upiDisc">₹0</b></div>
 
-    <div class="row" id="comboRow" style="display:none">
-      <span>Combo Discount</span><b id="comboDisc">₹0</b>
-    </div>
+   <div class="row" id="comboRow" style="display:none">
+  <span id="comboLabel">Combo Discount</span>
+  <b id="comboDisc">₹0</b>
+</div>
+
 
     <div class="row" id="specialRow" style="display:none">
       <span id="specialLabel">Special Discount</span>
