--- a/index.html
+++ b/index.html
@@ -188,9 +188,9 @@ th{background:#fafafa}
   <div class="summary">
     <div class="row"><span>Offer ID</span><b id="offerId">Not Created</b></div>
     <div class="row"><span>Valid Till</span><b id="validTill">-</b></div>
-    <div class="row"><span>Sales</span><b id="sSales"></b></div>
-    <div class="row"><span>Customer</span><b id="sCustomer"></b></div>
-    <div class="row"><span>Mobile</span><b id="sMobile"></b></div>
+    <div class="row"><span>Sales Person</span><b id="sSales"></b></div>
+    <div class="row"><span>Customer Name</span><b id="sCustomer"></b></div>
+    <div class="row"><span>Mobile Number</span><b id="sMobile"></b></div>
   </div>
 
   <table>
