--- a/index.html
+++ b/index.html
@@ -230,6 +230,13 @@ th{background:#fafafa}
       <span>Final Payable</span>
       <b class="final" id="finalPay">₹0</b>
     </div>
+<div id="upiQRBox" style="display:none; text-align:center; margin-top:12px;">
+  <img src="upi.png" style="height:160px;">
+  <div style="font-size:12px;font-weight:700;margin-top:6px">
+    Scan & Pay via UPI
+  </div>
+</div>
+
   </div>
 
 </div>
