--- a/index.html
+++ b/index.html
@@ -176,7 +176,14 @@ th{background:#fafafa}
 
 <!-- ============= SCREENSHOT AREA ============= -->
 <div id="offerArea">
+  
+<div id="upiQRSection" style="display:none; text-align:center; margin-top:12px;">
+  <img id="upiQRImage" src="upi.png" style="height:160px;">
+  <br><br>
+  <button id="copyQRBtn" class="btn-secondary">📲 Copy QR</button>
+</div>
 
+  
   <div class="header">
     <img src="logo.png" class="logo">
     <div>
