--- a/index.html
+++ b/index.html
@@ -177,6 +177,9 @@ th{background:#fafafa}
 <!-- ============= SCREENSHOT AREA ============= -->
 <div id="offerArea">
   
+<div id="upiQRSection" style="display:none; text-align:center; margin-top:12px;">
+  <img id="upiQRImage" src="upi.png" style="height:160px;">
+  <br><br>
   <button id="copyQRBtn" class="btn-secondary">📲 Copy QR</button>
 </div>
 
@@ -234,11 +237,7 @@ th{background:#fafafa}
       <span>Final Payable</span>
       <b class="final" id="finalPay">₹0</b>
     </div>
-<div id="upiQRBox" style="display:none; text-align:center; margin-top:12px;">
-  <img src="upi.png" style="height:160px;">
-  <div style="font-size:12px;font-weight:700;margin-top:6px">
-    Scan & Pay via UPI
-  </div>
+
 </div>
 
   </div>
